[gd_scene load_steps=3 format=3 uid="uid://cln6r61jlyeum"]

[ext_resource type="Script" path="res://tools/editor/widgets/NoteMovementWidget.gd" id="1"]
[ext_resource type="Script" path="res://tools/editor/widgets/MovementGizmo.gd" id="3"]

[node name="NoteMovementWidget" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1")

[node name="MovementGizmo" type="Control" parent="."]
anchors_preset = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 60.0
pivot_offset = Vector2(20, 20)
script = ExtResource("3")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 1

[connection signal="dragged" from="MovementGizmo" to="." method="_on_dragged"]
[connection signal="finished_dragging" from="MovementGizmo" to="." method="_on_finish_dragging"]
[connection signal="start_dragging" from="MovementGizmo" to="." method="_on_start_dragging"]
